--- a/config_sample.env
+++ b/config_sample.env
@@ -3,36 +3,33 @@
 ## Rest of variable can be setup using BOT by /bsetting command
 
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "5166641695:AAGLZrxbhfklkSXkAyzlps5n0bXa3cHFAbY"
+OWNER_ID = "2006425984"
+TELEGRAM_API = "26459578"
+TELEGRAM_HASH = "21d9ab210d3d1f30f6078c19ad02be6b"
 
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
+GDRIVE_ID = "0AJJOJ5NE2R9FUk9PVA"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
-STATUS_UPDATE_INTERVAL = "15"                       
+STATUS_UPDATE_INTERVAL = "20"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
-AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "60" 
-DATABASE_URL = ""
+AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1" 
+DATABASE_URL = "mongodb+srv://tgbot:Qwerty11@cluster0.ifiq7ww.mongodb.net/?retryWrites=true&w=majority"
 AUTHORIZED_CHATS = ""
-SUDO_USERS = ""
+SUDO_USERS = "1053777957"
 IGNORE_PENDING_REQUESTS = ""
-IS_TEAM_DRIVE = ""
-USE_SERVICE_ACCOUNTS = ""
+IS_TEAM_DRIVE = "True"
+USE_SERVICE_ACCOUNTS = "True"
 SA_MAIL = ""                                          # SA Email id To display in USER TD Section
-INDEX_URL = ""                                        # Not end with /
-STATUS_LIMIT = "3"                                    # Recommended Value : 2 (If Using PICS)
-STOP_DUPLICATE = ""
+INDEX_URL = "https://spidycloud.gq/2:"                                        # Not end with /
+STATUS_LIMIT = "2"                                    # Recommended Value : 2 (If Using PICS)
+STOP_DUPLICATE = "True"
 CMD_SUFFIX = ""
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
 EXTENSION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = ""
 TGH_THUMB = ""                                        # Give Telegraph URL(graph.org) for Logs/File Thumbnail
-
-# Safe mode will stop showing file name in status, and enable bot pm and force bot pm automatically.
-SAFE_MODE = ""                                        # Defaul is false
 
 # TURN ON/OFF FUCTIONS
 LEECH_ENABLED = ""                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
@@ -46,24 +43,22 @@ MEDIAINFO_ENABLED = ""                                # Default is False (only u
 SET_BOT_COMMANDS = "" 
 
 # UPDATE
-UPSTREAM_REPO = "https://github.com/SN-Abdullah-Al-Noman/SN_WZML"
+UPSTREAM_REPO = "https://github.com/spidyynaik/heroku"
 UPSTREAM_BRANCH = "master"
 UPDATE_PACKAGES = "False"
 
 # PM SUPPORT
-BOT_PM = ""                                           # If this True/False any User can Enable/Disable BOT_PM by using Usetting
-FORCE_BOT_PM = ""                                     # If this True then NO User can Enable/Disable BOT_PM by using Usetting 
+BOT_PM = "True"                                           # If this True/False any User can Enable/Disable BOT_PM by using Usetting
+FORCE_BOT_PM = "True"                                     # If this True then NO User can Enable/Disable BOT_PM by using Usetting 
 
 # LEECH
-LEECH_LOG = ""                                        # Must be Started with -100xxxxxxx
+LEECH_LOG = "-1001287201927"                                        # Must be Started with -100xxxxxxx
 LEECH_LOG_URL = ""                                    # Use Invite link for PUBLIC/PRIVATE Leech log 
 LEECH_LOG_INDEXING = ""                               # Default is False make it True if you want leech file indexing in leech log channel
-LEECH_CAPTION = ""
-REMOVE_FILE_TAG = ""
 
 # MIRROR
 ENABLE_USR_TD = ""                                    # If this TRUE then User can create its own TD Category
-MIRROR_LOGS = ""                                      # Must be Started with -100xxxxxxx
+MIRROR_LOGS = "-1001287201927"                                      # Must be Started with -100xxxxxxx
 MIRROR_LOG_URL = ""                                   # Use Invite link for PUBLIC/PRIVATE Mirror log 
 LINK_LOGS = ""                                        # Must be Started with -100xxxxxxx
 
@@ -84,7 +79,8 @@ GD_INFO = ""
 FSUB_IDS = ""                                         # Each id Should be seperated by Space & ID must be started with -100xxxxxxx
 
 # QBITORRENT
-BASE_URL = ""
+BASE_URL = "https://132.145.69.221:8080"
+SERVER_PORT = "8080"
 WEB_PINCODE = ""
 QB_SEED = ""
 
@@ -100,9 +96,9 @@ RSS_CHAT_ID = ""                                      # Chat ID (Started with -1
 USER_SESSION_STRING = ""                              # Use it for 4GB leeching
 
 # MEGA
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
-MEGA_PASSWORD = ""
+MEGA_API_KEY = "u5oAxAwJ"
+MEGA_EMAIL_ID = "mrspidynaik@gmail.com"
+MEGA_PASSWORD = "Mega.nz#1432"
 
 # SHORTENER 
 SHORTENER = ""                                        # Seperate multiple shortner with space
@@ -110,10 +106,10 @@ SHORTENER_API = ""                                    # Seperate multiple shortn
 
 # CRYPTS
 SAME_ACC_COOKIES = ""                                 # If using Different Account For Crypts set it to False (Deafult is True)
-GDTOT_CRYPT = ""                                      # Crypt for GDTOT
-HUBDRIVE_CRYPT = ""                                   # Crypt for HUBDRIVE
-KATDRIVE_CRYPT = ""                                   # Crypt for KATDRIVE
-KOLOP_CRYPT = ""                                      # Crypt for KOLOP + DRIVEHUB
+GDTOT_CRYPT = "YkdSd0d2KzBhRFpTeTBKcllBZlBpbEROWlVqQ0NzbVUwQjhuZFhyY0t5RT0%3D"                                      # Crypt for GDTOT
+HUBDRIVE_CRYPT = "aTd6VTNuSXFycWxXUTNzMkRIOXpvVStVK0ZuRHR4K1FnaHlYN3hkWXRwZz0%3D"                                   # Crypt for HUBDRIVE
+KATDRIVE_CRYPT = "bGJBVXBTa2xrcjBzdU41VXdkMjFtSkgrR2xxZzRWb1drdEdpSmRlYjZJdz0%3D"                                   # Crypt for KATDRIVE
+KOLOP_CRYPT = "bGJBVXBTa2xrcjBzdU41VXdkMjFtSkgrR2xxZzRWb1drdEdpSmRlYjZJdz0%3D"                                      # Crypt for KOLOP + DRIVEHUB
 DRIVEFIRE_CRYPT = ""                                  # Crypt for DRIVEFIRE
 SHAREDRIVE_PHPCKS = ""                                # PHPCKS for SHAREDRIVE
 XSRF_TOKEN = ""                                       # XSRF for SHARER.PW
@@ -134,21 +130,21 @@ MEGA_LIMIT = ""                                       # Limit the size of MEGA l
 DAILY_MIRROR_LIMIT = ""                               # Max size upto which user can Mirror in one day (int value without GB/MB)
 DAILY_LEECH_LIMIT = ""                                # Max size upto which user can Leech in one day (int value without GB/MB)
 TIME_GAP = "-1"                                       # Restrict User for accepting the consecutive link at a time (int value in seconds, -1 means no restriction) 
-ZIP_LEVEL = ""                                        # Zip Compression Level (int value) Default is 0 and single value . From 0 to 9 . Max is 9. 
 
 # PROGRESS SYMBOLS
-FINISHED_PROGRESS_STR = '■'                           # Get Any from https://coolsymbol.com
-UN_FINISHED_PROGRESS_STR = '□'                        # Get Any from https://coolsymbol.com
+FINISHED_PROGRESS_STR = '█'                           # Get Any from https://coolsymbol.com
+UN_FINISHED_PROGRESS_STR = '▒'                        # Get Any from https://coolsymbol.com
+MULTI_WORKING_PROGRESS_STR = '▁ ▂ ▃ ▄ ▅ ▆ ▇'         # Must have 7 Different Symbols for Dynamic Progress Bar
 
 # THEME
-EMOJI_THEME = ""                                      #Default is False
+EMOJI_THEME = "True"                                      #Default is False
 SHOW_LIMITS_IN_STATS = ""                             #Default is false 
 
 # VIEW STYLE
-LIST_MODE = ""                                        # List/Seach Result in Telegraph/Tg_Direct (Default is Telegraph)
+LIST_MODE = ""                                        # List/Seach Result in Telegraph/HTML/Tg_Direct (Default is Telegraph)
 
 # BRANDING
-CREDIT_NAME = "" 
+CREDIT_NAME = "Mr.SPIDY" 
 
 # DYNAMIC IMAGES
 PICS = ""                                             # Add multiple telgraph image links that are seperated by spaces
@@ -160,8 +156,8 @@ PIXABAY_CATEGORY = ""                                 # Put Category Name, Avail
 PIXABAY_SEARCH = ""                                   # Put Keyword to Download Images from Pixabay.com Limit : 100 characters
 
 # FONT STYLE
-NAME_FONT = ""                                        # Default Name of File on Upload message, Available Options : b, code, i, u, strike, spoiler
-CAPTION_FONT = ""                                     # Default Caption of Leeched files, Available Options : b, code, i, u, strike, spoiler
+NAME_FONT = "b"                                        # Default Name of File on Upload message, Available Options : b, code, i, u, strike, spoiler
+CAPTION_FONT = "b"                                     # Default Caption of Leeched files, Available Options : b, code, i, u, strike, spoiler
 
 # TEMPLATE ( Put in One Line )
 ANIME_TEMPLATE = "<b>{ro_title}</b>({na_title})\n<b>Format</b>: <code>{format}</code>\n<b>Status</b>: <code>{status}</code>\n<b>Start Date</b>: <code>{startdate}</code>\n<b>End Date</b>: <code>{enddate}</code>\n<b>Season</b>: <code>{season}</code>\n<b>Country</b>: {country}\n<b>Episodes</b>: <code>{episodes}</code>\n<b>Duration</b>: <code>{duration}</code>\n<b>Average Score</b>: <code>{avgscore}</code>\n<b>Genres</b>: {genres}\n<b>Hashtag</b>: {hashtag}\n<b>Studios</b>: {studios}\n\n<b>Description</b>: <i>{description}</i>"
@@ -170,8 +166,8 @@ IMDB_TEMPLATE = "<b>Title: </b> {title} [{year}]\n<b>Also Known As:</b> {aka}\n<
 # DIFFERENT BOT BUTTONS 
 SAVE_MSG = ""
 DISABLE_DRIVE_LINK = "" 
-VIEW_LINK = ""
-SOURCE_LINK = ""
+VIEW_LINK = "True"
+SOURCE_LINK = "True"
 START_BTN1_NAME = ""
 START_BTN1_URL = ""
 START_BTN2_NAME = ""
