--- a/config.env
+++ b/config.env
@@ -31,6 +31,7 @@ EXTENSION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = ""
 TGH_THUMB = ""                                        # Give Telegraph URL(graph.org) for Logs/File Thumbnail
 
+SAFE_MODE = "True"
 # TURN ON/OFF FUCTIONS
 LEECH_ENABLED = ""                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
 MIRROR_ENABLED = ""                                   # Default is False (only use by owner/sudo) Make it True (for authorized chats)
