--- a/config.env
+++ b/config.env
@@ -11,9 +11,9 @@ TELEGRAM_HASH = "21d9ab210d3d1f30f6078c19ad02be6b"
 # OPTIONAL CONFIG
 GDRIVE_ID = "0AJJOJ5NE2R9FUk9PVA"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
-STATUS_UPDATE_INTERVAL = "20"                       
+STATUS_UPDATE_INTERVAL = "15"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
-AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "-1" 
+AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "60" 
 DATABASE_URL = "mongodb+srv://tgbot:Qwerty11@cluster0.ifiq7ww.mongodb.net/?retryWrites=true&w=majority"
 AUTHORIZED_CHATS = ""
 SUDO_USERS = "1053777957"
@@ -22,7 +22,7 @@ IS_TEAM_DRIVE = "True"
 USE_SERVICE_ACCOUNTS = "True"
 SA_MAIL = ""                                          # SA Email id To display in USER TD Section
 INDEX_URL = "https://spidycloud.gq/2:"                                        # Not end with /
-STATUS_LIMIT = "2"                                    # Recommended Value : 2 (If Using PICS)
+STATUS_LIMIT = "3"                                    # Recommended Value : 2 (If Using PICS)
 STOP_DUPLICATE = "True"
 CMD_SUFFIX = ""
 UPTOBOX_TOKEN = ""
@@ -31,7 +31,9 @@ EXTENSION_FILTER = ""
 INCOMPLETE_TASK_NOTIFIER = ""
 TGH_THUMB = ""                                        # Give Telegraph URL(graph.org) for Logs/File Thumbnail
 
-SAFE_MODE = "True"
+# Safe mode will stop showing file name in status, and enable bot pm and force bot pm automatically.
+SAFE_MODE = "True"                                        # Defaul is false
+
 # TURN ON/OFF FUCTIONS
 LEECH_ENABLED = ""                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
 MIRROR_ENABLED = ""                                   # Default is False (only use by owner/sudo) Make it True (for authorized chats)
@@ -56,6 +58,8 @@ FORCE_BOT_PM = "True"                                     # If this True then NO
 LEECH_LOG = "-1001287201927"                                        # Must be Started with -100xxxxxxx
 LEECH_LOG_URL = ""                                    # Use Invite link for PUBLIC/PRIVATE Leech log 
 LEECH_LOG_INDEXING = ""                               # Default is False make it True if you want leech file indexing in leech log channel
+LEECH_CAPTION = ""
+REMOVE_FILE_TAG = ""
 
 # MIRROR
 ENABLE_USR_TD = ""                                    # If this TRUE then User can create its own TD Category
@@ -80,8 +84,7 @@ GD_INFO = ""
 FSUB_IDS = ""                                         # Each id Should be seperated by Space & ID must be started with -100xxxxxxx
 
 # QBITORRENT
-BASE_URL = "https://132.145.69.221:8080"
-SERVER_PORT = "8080"
+BASE_URL = ""
 WEB_PINCODE = ""
 QB_SEED = ""
 
@@ -114,7 +117,7 @@ KOLOP_CRYPT = "bGJBVXBTa2xrcjBzdU41VXdkMjFtSkgrR2xxZzRWb1drdEdpSmRlYjZJdz0%3D"  
 DRIVEFIRE_CRYPT = ""                                  # Crypt for DRIVEFIRE
 SHAREDRIVE_PHPCKS = ""                                # PHPCKS for SHAREDRIVE
 XSRF_TOKEN = ""                                       # XSRF for SHARER.PW
-laravel_session = ""                                  # laravel_session for SHARER.PW
+laravel_session = ""                                   # laravel_session for SHARER.PW
 
 # BOT LIMITS
 TOTAL_TASKS_LIMIT = ""                                # Limit Total Max Task At a time (int value)
@@ -131,18 +134,18 @@ MEGA_LIMIT = ""                                       # Limit the size of MEGA l
 DAILY_MIRROR_LIMIT = ""                               # Max size upto which user can Mirror in one day (int value without GB/MB)
 DAILY_LEECH_LIMIT = ""                                # Max size upto which user can Leech in one day (int value without GB/MB)
 TIME_GAP = "-1"                                       # Restrict User for accepting the consecutive link at a time (int value in seconds, -1 means no restriction) 
+ZIP_LEVEL = ""                                        # Zip Compression Level (int value) Default is 0 and single value . From 0 to 9 . Max is 9. 
 
 # PROGRESS SYMBOLS
-FINISHED_PROGRESS_STR = '█'                           # Get Any from https://coolsymbol.com
-UN_FINISHED_PROGRESS_STR = '▒'                        # Get Any from https://coolsymbol.com
-MULTI_WORKING_PROGRESS_STR = '▁ ▂ ▃ ▄ ▅ ▆ ▇'         # Must have 7 Different Symbols for Dynamic Progress Bar
+FINISHED_PROGRESS_STR = '■'                           # Get Any from https://coolsymbol.com
+UN_FINISHED_PROGRESS_STR = '□'                        # Get Any from https://coolsymbol.com
 
 # THEME
-EMOJI_THEME = "True"                                      #Default is False
+EMOJI_THEME = ""                                      #Default is False
 SHOW_LIMITS_IN_STATS = ""                             #Default is false 
 
 # VIEW STYLE
-LIST_MODE = ""                                        # List/Seach Result in Telegraph/HTML/Tg_Direct (Default is Telegraph)
+LIST_MODE = ""                                        # List/Seach Result in Telegraph/Tg_Direct (Default is Telegraph)
 
 # BRANDING
 CREDIT_NAME = "Mr.SPIDY" 
@@ -168,7 +171,7 @@ IMDB_TEMPLATE = "<b>Title: </b> {title} [{year}]\n<b>Also Known As:</b> {aka}\n<
 SAVE_MSG = ""
 DISABLE_DRIVE_LINK = "" 
 VIEW_LINK = "True"
-SOURCE_LINK = "True"
+SOURCE_LINK = ""
 START_BTN1_NAME = ""
 START_BTN1_URL = ""
 START_BTN2_NAME = ""
