--- a/config.env
+++ b/config.env
@@ -141,8 +141,8 @@ FINISHED_PROGRESS_STR = '■'                           # Get Any from https://c
 UN_FINISHED_PROGRESS_STR = '□'                        # Get Any from https://coolsymbol.com
 
 # THEME
-EMOJI_THEME = ""                                      #Default is False
-SHOW_LIMITS_IN_STATS = ""                             #Default is false 
+EMOJI_THEME = "True"                                      #Default is False
+SHOW_LIMITS_IN_STATS = "True"                             #Default is false 
 
 # VIEW STYLE
 LIST_MODE = ""                                        # List/Seach Result in Telegraph/Tg_Direct (Default is Telegraph)
@@ -172,10 +172,10 @@ SAVE_MSG = ""
 DISABLE_DRIVE_LINK = "" 
 VIEW_LINK = "True"
 SOURCE_LINK = ""
-START_BTN1_NAME = ""
-START_BTN1_URL = ""
-START_BTN2_NAME = ""
-START_BTN2_URL = ""
+START_BTN1_NAME = "Owner"
+START_BTN1_URL = "https://t.me/Mr_SPIDY"
+START_BTN2_NAME = "Group"
+START_BTN2_URL = "https://t.me/+rcsGBlDFBjs5YzFl"
 BUTTON_FOUR_NAME = ""
 BUTTON_FOUR_URL = ""
 BUTTON_FIVE_NAME = ""
